POR/RefEdge/src/objects/Reference_Note__c.object
<CustomObject>
    <description>Custom Object to Store Custom Notes.</description>
    <fields>
        <fullName>Account_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Request</label>
        <referenceTo>Reference_Request_Account__c</referenceTo>
        <relationshipLabel>Reference Notes</relationshipLabel>
        <relationshipName>Reference_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Notes</relationshipLabel>
        <relationshipName>Reference_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Notes</relationshipLabel>
        <relationshipName>Reference_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <formula>HYPERLINK(  &apos;/&apos;+Id , &apos;Details&apos;)</formula>
        <label>Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nomination</label>
        <referenceTo>Nomination__c</referenceTo>
        <relationshipLabel>Reference Notes</relationshipLabel>
        <relationshipName>Reference_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Note Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reference_Content__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reference Content</label>
        <referenceTo>Reference_Content__c</referenceTo>
        <relationshipLabel>Reference Notes</relationshipLabel>
        <relationshipName>Reference_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reference Request</label>
        <referenceTo>Reference_Request__c</referenceTo>
        <relationshipLabel>Reference Notes</relationshipLabel>
        <relationshipName>Reference_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unspecified_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Unspecified Request</label>
        <referenceTo>Unspecified_Request__c</referenceTo>
        <relationshipLabel>Reference Notes</relationshipLabel>
        <relationshipName>Reference_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reference Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Details__c</columns>
        <columns>Note_Date__c</columns>
        <columns>Note__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Request__c</columns>
        <columns>Reference_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RN-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>